--- a/search.css
+++ b/search.css
@@ -6,6 +6,16 @@ button{
     border: none;
     background-color: white;
 }
+
+input{
+    border: none;
+    min-width: 80px;
+    outline-style: none;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+}
+
 nav{
     margin: 30px;
     width: 100%;
