--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,161 @@ footer li{
     color: black;
     padding-bottom: 15px;
 }
+
+
+@media screen and (max-width:320px) {
+    .header{
+        width: 695px;
+    }
+    #ss{
+       display: none;
+    }
+#one{
+    width: 300px;
+}
+#two{
+    width: 200px;
+    margin-left: 30px;
+}
+
+.search ul{
+    margin: 0;
+    width: 700px;
+}
+
+.search ul li{
+    width: 100px;
+}
+#search{
+    padding: 2px;
+    width: 20px;
+}
+.img img{
+    width: 580px;
+}
+.photo img{
+    width: 320px;
+}
+.card{
+    width: 700px;
+}
+.card{
+display: flex;
+flex-wrap: wrap;
+}
+.photo img{
+    width: 600px;
+}
+
+
+  }
+
+@media screen and (max-width:376px) {
+    .header{
+        width: 825px;
+    }
+    nav{
+        margin-left: 30px;
+    }
+    #ss{
+       display: none;
+    }
+#one{
+    width: 300px;
+}
+#two{
+    width: 200px;
+    margin-left: 30px;
+}
+
+.search ul{
+    margin: 30px;
+    width: 700px;
+}
+
+.search ul li{
+    width: 100px;
+}
+#search{
+    padding: 2px;
+    width: 20px;
+}
+.img img{
+    width: 580px;
+}
+.photo img{
+    width: 320px;
+}
+.card{
+    width: 700px;
+}
+.card{
+display: flex;
+margin: 30px;
+flex-wrap: wrap;
+}
+.photo img{
+    width: 600px;
+}
+table{
+    width: 700px;
+}
+
+
+  }
+
+@media screen and (max-width:426px) {
+    .header{
+        width: 825px;
+    }
+    nav{
+        margin-left: 30px;
+    }
+    #ss{
+       display: none;
+    }
+#one{
+    width: 300px;
+}
+#two{
+    width: 200px;
+    margin-left: 30px;
+}
+
+.search ul{
+    margin: 30px;
+    width: 700px;
+}
+
+.search ul li{
+    width: 100px;
+}
+#search{
+    padding: 2px;
+    width: 20px;
+}
+.img img{
+    width: 580px;
+}
+.photo img{
+    width: 320px;
+}
+.card{
+    width: 700px;
+}
+.card{
+display: flex;
+margin: 30px;
+flex-wrap: wrap;
+}
+.photo img{
+    width: 600px;
+}
+table{
+    width: 700px;
+}
+
+
+  }
+
+
