--- a/styles.css
+++ b/styles.css
@@ -191,159 +191,216 @@ footer li{
 }
 
 
-@media screen and (max-width:320px) {
+@media screen and (width <= 320px) {
     .header{
-        width: 695px;
-    }
-    #ss{
-       display: none;
-    }
-#one{
-    width: 300px;
-}
-#two{
-    width: 200px;
-    margin-left: 30px;
-}
-
-.search ul{
-    margin: 0;
-    width: 700px;
-}
-
-.search ul li{
-    width: 100px;
-}
-#search{
-    padding: 2px;
-    width: 20px;
-}
-.img img{
-    width: 580px;
-}
-.photo img{
-    width: 320px;
-}
-.card{
-    width: 700px;
-}
-.card{
-display: flex;
-flex-wrap: wrap;
-}
-.photo img{
-    width: 600px;
-}
-
-
-  }
-
-@media screen and (max-width:376px) {
-    .header{
-        width: 825px;
+        width: 795px;
     }
     nav{
-        margin-left: 30px;
+        min-width: 500px;
     }
-    #ss{
-       display: none;
+    nav li{
+        width: 50px;
+        font-size: 12px;
     }
 #one{
     width: 300px;
+    margin-left: 0;
 }
 #two{
-    width: 200px;
-    margin-left: 30px;
+    width: 300px;
+    margin-left: 10px;
 }
-
+.search{
+    margin: 20px;
+}
 .search ul{
-    margin: 30px;
-    width: 700px;
+    max-width: 499px;
 }
 
 .search ul li{
-    width: 100px;
+    width: 50px;
 }
 #search{
     padding: 2px;
     width: 20px;
 }
 .img img{
-    width: 580px;
+    width: 480px;
 }
 .photo img{
-    width: 320px;
+    min-width: 520px;
 }
 .card{
-    width: 700px;
+    width: 400px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.card div , img {
+    max-width: 150px;
 }
 .card{
 display: flex;
-margin: 30px;
 flex-wrap: wrap;
 }
+.exp img{
+    max-width: 400px;
+}
+.shop img{
+    max-width: 200px;
+    margin-right: 300px;
+}
 .photo img{
-    width: 600px;
+    max-width: 460px;
 }
 table{
-    width: 700px;
+    max-width: 440px;
+}
+footer ul{
+    padding: 25px;
 }
 
 
   }
 
-@media screen and (max-width:426px) {
+  @media screen and (width <= 376px) {
     .header{
-        width: 825px;
+        width: 795px;
     }
     nav{
-        margin-left: 30px;
+        min-width: 500px;
     }
-    #ss{
-       display: none;
+    nav li{
+        width: 50px;
+        font-size: 12px;
     }
 #one{
     width: 300px;
+    margin-left: 0;
 }
 #two{
-    width: 200px;
-    margin-left: 30px;
+    width: 300px;
+    margin-left: 10px;
 }
-
+.search{
+    margin: 20px;
+}
 .search ul{
-    margin: 30px;
-    width: 700px;
+    max-width: 499px;
 }
 
 .search ul li{
-    width: 100px;
+    width: 50px;
 }
 #search{
     padding: 2px;
     width: 20px;
 }
 .img img{
-    width: 580px;
+    width: 480px;
 }
 .photo img{
-    width: 320px;
+    min-width: 520px;
 }
 .card{
-    width: 700px;
+    width: 400px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.card div , img {
+    max-width: 150px;
 }
 .card{
 display: flex;
-margin: 30px;
 flex-wrap: wrap;
 }
+.exp img{
+    max-width: 400px;
+}
+.shop img{
+    max-width: 200px;
+    margin-right: 300px;
+}
 .photo img{
-    width: 600px;
+    max-width: 460px;
 }
 table{
-    width: 700px;
+    max-width: 440px;
+}
+footer ul{
+    padding: 25px;
 }
 
 
   }
 
+  @media screen and (width <= 426px) {
+    .header{
+        width: 795px;
+    }
+    nav{
+        min-width: 500px;
+    }
+    nav li{
+        width: 50px;
+        font-size: 12px;
+    }
+#one{
+    width: 300px;
+    margin-left: 0;
+}
+#two{
+    width: 300px;
+    margin-left: 10px;
+}
+.search{
+    margin: 20px;
+}
+.search ul{
+    max-width: 499px;
+}
+
+.search ul li{
+    width: 50px;
+}
+#search{
+    padding: 2px;
+    width: 20px;
+}
+.img img{
+    min-width: 680px;
+}
+.photo img{
+    min-width: 520px;
+}
+.card{
+    width: 600px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.card div , img {
+    max-width: 150px;
+}
+.card{
+display: flex;
+flex-wrap: wrap;
+}
+.exp img{
+    max-width: 700px;
+}
+.shop img{
+    max-width: 400px;
+    margin-right: 300px;
+}
+.photo img{
+    max-width: 700px;
+}
+table{
+    max-width: 740px;
+}
+footer ul{
+    padding: 55px;
+}
+
+
+  }
 
